# fastapi-sample

./: README.md  pyproject.toml
.github/workflows/: format.yml  linter.yml
src/fastapi_sample/: __init__.py  app.py
src/fastapi_sample/api/: docs.py  router.py
src/fastapi_sample/api/dashboard/: router.py
