[project]
name = "fastapi-sample"
version = "0.1.2"
description = "Add your description here"
authors = []
dependencies = [
    "fastapi>=0.101.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.1.1",
    "python-multipart>=0.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "black>=23.7.0",
]

[tool.rye.scripts]
server = { cmd = "uvicorn src.fastapi_sample.app:app --reload" }

[tool.hatch.metadata]
allow-direct-references = true
